<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ntp</string>
    <string name="hello_world">Hello world!</string>
    <string name="allCourse">所有课程</string>
    <string name="myCourse">我的课程</string>
    <string name="homework">消息</string>
    <string name="me">我</string>
    <string name="searchCourse">课程名称</string>
    <string name="load">加载中...</string>
    <string name="courseType">课程类型</string>
    <string name="type">类型</string>
    <string name="search">搜索</string>
    <string name="no_record">没有搜索记录</string>
    <string name="load_course">正在加载课程中...</string>
    <string name="username">用户名</string>
    <string name="myDownload">我的下载</string>
    <string name="setting">设置</string>
    <string name="noLogin">未登录</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="loginInterface">登录</string>
    <string name="use234G">用移动网络播放视频和下载课件</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="aboutDetail">网络教学客户端</string>
    <string name="version">Version  1.0</string>
    <string name="right">By yanxing</string>
    <string name="java">Java程序设计</string>
    <string name="overview">简介</string>
    <string name="overview1">简介：</string>
    <string name="courseWare">课件</string>
    <string name="courseVideo">视频</string>
    <string name="courseForum">讨论</string>
    <string name="home">首页</string>
    <string name="code">课程代码</string>
    <string name="cache">清除缓存(Debug用)</string>
    <string name="cache_size">MB</string>
    <string name="coursewareName">课件名称</string>
    <string name="size">课件大小</string>
    <string name="coursevideoName">课程视频名称</string>
    <string name="test">创业团队做手机客户端，应该先做 Android 还是 iOS？为什么？</string>
    <string name="testName">yanxing</string>
    <string name="testTime">2015-02-02</string>
    <string name="testReply">回复数</string>
    <string name="register">注册</string>
    <string name="newRegister">注册新用户</string>
    <string name="searchName">搜索的课程历史</string>
    <string name="placeholder">占位符</string>
    <string name="exitLogin">退出当前账号</string>
    <string name="exitApp">退出应用</string>
    <string name="email">邮箱</string>
    <string name="emailTest">lyxtime@163.com</string>
    <string name="sex">性别</string>
    <string name="sexTest">男</string>
    <string name="modPwd">修改密码</string>
    <string name="confirm">保存</string>
    <string name="emailOrPwd">邮箱或密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="photo">拍摄头像</string>
    <string name="picture">从相册中选择</string>
    <string name="save">保存</string>
    <string name="tip">(已下载)</string>
    <string name="download">下载</string>
    <string name="title">标题</string>
    <string name="baseInfo">基本信息</string>
    <string name="downloadManage">下载管理</string>
    <string name="myCourseTip">你尚未登录，无法查看你的课程</string>
    <string name="homeworkTest">C语言第一章作业</string>
    <string name="homeworkCourseTest">所属课程:C语言</string>
    <string name="noticeTip">你尚未登录，无法显示消息</string>
    <string name="homeworkTitle">作业</string>
    <string name="reply">回帖</string>
    <string name="replyTip">你的回复</string>
    <string name="detail">详情</string>
    <string name="homeworkdetail">作业详情</string>
    <string name="readOver">批语:</string>
    <string name="score">成绩：</string>
    <string name="homework1">作业</string>
    <string name="question">的问题</string>
    <string name="commentNotice">评论</string>
    <string name="comment">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;yanxing</string>
    <string name="nameTest">yanxing</string>
    <string name="forumComment">发送</string>
    <string name="courseForumComment">参加讨论</string>
    <string name="replyComment">你想说些什么...</string>
    <string name="register_name_digits">_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="commentContent">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;:不难
                 创业团队做手机客户端，应该先做 Android 还是 iOS？为什么？</string>
    <string name="reply1">回复</string>


</resources>
