<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_pressed"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center_vertical"
        android:background="@color/layout_bg_normal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/title_back_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/course_name"
            android:textSize="17sp"
            android:layout_marginLeft="5dp"
            android:text="@string/loginInterface" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_top_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/username"
            android:paddingLeft="8dp"
            android:background="@color/layout_bg_normal"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/layout_bg_pressed" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/password"
            android:paddingLeft="8dp"
            android:background="@color/layout_bg_normal"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/layout_bg_normal"
            android:textSize="18sp"
            android:background="@drawable/rounded_login_btn"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>