<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_pressed"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/login"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:gravity="center"
            android:textColor="@color/menu_text_reserve"
            android:background="@drawable/rounded_login_text"
            android:text="@string/noLogin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myCourse"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:textColor="@color/course_name"
            android:textSize="16sp"
            android:clickable="true"
            android:background="@drawable/layout_selector_bg"
            android:text="@string/myCourse" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/layout_bg_pressed" />

        <TextView
            android:id="@+id/myDownload"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:textColor="@color/course_name"
            android:clickable="true"
            android:textSize="16sp"
            android:background="@drawable/layout_selector_bg"
            android:text="@string/myDownload" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/layout_bg_pressed" />

        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:textColor="@color/course_name"
            android:clickable="true"
            android:textSize="16sp"
            android:background="@drawable/layout_selector_bg"
            android:text="@string/setting" />
    </LinearLayout>


</LinearLayout>
