<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_pressed"
    android:orientation="vertical"
    tools:context="com.chzu.ntp.ui.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center_vertical"
        android:background="@color/layout_bg_normal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/title_back_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/course_name"
            android:textSize="17sp"
            android:layout_marginLeft="5dp"
            android:text="@string/setting" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_top_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:background="@drawable/layout_selector_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/course_name"
                android:paddingLeft="13dp"
                android:layout_marginTop="4dp"
                android:text="@string/use234G" />

            <ImageView
                android:id="@+id/switchImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:src="@drawable/switch_off" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/layout_bg_pressed" />

        <RelativeLayout
            android:id="@+id/cache"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/course_name"
                android:paddingLeft="13dp"
                android:gravity="center_vertical"
                android:background="@drawable/layout_selector_bg"
                android:text="@string/cache" />

            <TextView
                android:id="@+id/cache_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:text="@string/cache_size" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/layout_bg_pressed" />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/course_name"
            android:clickable="true"
            android:paddingLeft="13dp"
            android:gravity="center_vertical"
            android:background="@drawable/layout_selector_bg"
            android:text="@string/about" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/layout_bg_pressed" />


        <TextView
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textColor="@color/course_name"
            android:paddingLeft="13dp"
            android:clickable="true"
            android:background="@drawable/layout_selector_bg"
            android:text="@string/exit" />
    </LinearLayout>


</LinearLayout>
