<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/nav_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:background="@drawable/title_back_img"
            android:clickable="true" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center"
            android:text="@string/courseForumComment"
            android:textColor="@color/course_name"
            android:textSize="18sp" />

        <Button
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_download_btn"
            android:onClick="comment"
            android:text="@string/forumComment"
            android:textColor="@color/layout_bg_normal"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_top_line" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:hint="@string/replyComment"
        android:background="@color/layout_bg_pressed"
        android:cursorVisible="true"/>

</LinearLayout>