<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_pressed"
    android:orientation="vertical">

    <com.ntp.view.MyTitleView xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/myTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nav_bg"
        ptr:title="@string/detail" />

    <ImageView
        android:id="@+id/h_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myTitleView"
        android:background="@drawable/list_top_line" />

    <LinearLayout
        android:id="@+id/load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/h_line"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/layout_bg_normal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/about"
                android:textColor="@color/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:gravity="right"
                android:layout_marginRight="@dimen/my_margin_left"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/forum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/my_margin_left_right"
            android:text="@string/about"
            android:layout_marginBottom="6dp"
            android:textSize="15sp"
            android:textColor="@color/course_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/load"
        android:layout_marginLeft="6dp"
        android:clickable="true"
        android:onClick="refreshReply"
        android:text="@string/comment"/>

    <com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pull_to_refresh_listview"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:divider="@color/divider_line"
        android:layout_below="@id/comment"
        ptr:ptrHeaderTextColor="@color/menu_text_reserve"
        android:dividerHeight="@dimen/divider_line"
        android:scrollbarStyle="outsideOverlay"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="#0000"
        android:background="@null"
        android:scrollbars="none" />


    <LinearLayout
        android:id="@id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/nav_bg1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_top_line" />
       <!-- 回复框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/replyContent"
                style="@style/MyEditStyle2"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="6dp"
                android:layout_weight="3"
                android:hint="@string/replyTip"
                android:inputType="text"
                android:paddingBottom="5dp"
                android:textColor="@color/menu_text_normal" />

            <Button
                android:id="@+id/reply"
                android:layout_width="58dp"
                android:layout_height="30dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_download_btn"
                android:onClick="reply"
                android:text="@string/reply"
                android:textColor="@color/layout_bg_normal"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
