<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_normal"
    android:orientation="horizontal">
    <!-- 图片（头像）暂不使用-->
    <ImageView
        android:id="@+id/img"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginLeft="@dimen/my_margin_left_right"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="9dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/my_margin_left_right"
            android:orientation="horizontal">
            <!-- 回复内容-->
            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/course_name"
                android:text="@string/homeworkTest"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- 用户名-->
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/homeworkCourseTest" />

            <!-- 时间-->
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="@dimen/my_margin_left_right"
                android:text="@string/testTime" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
